--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "respect/validation": "^1.1",
         "slim/csrf": "^0.8.1",
         "slim/flash": "^0.2.0",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "nette/mail": "^2.4"
     },
     "require-dev": {
         "phpunit/phpunit": ">=4.8 < 6.0"
